--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,7 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     services:
-      docker
+      docker:
+        image: docker:20.10.9
 
     steps:
       - name: Checkout code
