--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,8 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     services:
-      docker:
-        image: docker:20.10.9
+      docker
 
     steps:
       - name: Checkout code
@@ -23,6 +22,12 @@ jobs:
       - name: Test
         run: |
           docker run -e CI=true hocha/react-test npm test
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push images
         run: |
@@ -30,7 +35,6 @@ jobs:
           docker build -t hocha/multi-nginx ./nginx
           docker build -t hocha/multi-server ./server
           docker build -t hocha/multi-worker ./worker
-          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
           docker push hocha/multi-client
           docker push hocha/multi-nginx
           docker push hocha/multi-server
